--- a/roveretosegnala/www/templates/archiviodetail.html
+++ b/roveretosegnala/www/templates/archiviodetail.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="signal-detail-element">
-            <i class="icon ion-ios-location" style="font-size:25px; margin-right:8px"></i> {{signal.location.address}}
+            <i class="icon ion-location" style="font-size:25px; margin-right:8px"></i> {{signal.location.address}}
         </div>
 
         <div class="signal-detail-element">
