--- a/roveretosegnala/www/templates/archivio.html
+++ b/roveretosegnala/www/templates/archivio.html
@@ -1,55 +1,59 @@
 <ion-view title="{{'archive_title' | translate}}">
-    <ion-nav-view name="archivio">
+    <ion-tabs class="tabs-positive  tabs-top">
+        <ion-tab title="{{'archive_closed' | translate}}">
+<div>               <ion-content>
 
-        <ion-tabs class="tabs-positive has-tabs-top tabs-top">
+                    <ion-list padding="true">
+                        <ion-item ng-repeat=" signal in listclosed.data | filter: { status: 'closed' } " href="#/app/archiviodetail/{{signal.id}} " type="item-link ">
 
-            <ion-tab title="{{'archive_closed' | translate}}">
-                <ion-content class="padding">
-                    <ion-list>
-                        <ion-item ng-repeat="signal in listclosed.data | filter: { status: 'closed' }" href="#/app/archiviodetail/{{signal.id}}" type="item-link">
-                            <b>{{signal.attribute.title}}</b>
-
-
-                            <p><i class="icon ion-ios-location" style="font-size:25px;"></i> {{signal.location.address}}</p>
-
-                        </ion-item>
-                    </ion-list>
-                    <ion-infinite-scroll ng-if="!noMoreClosedItemsAvailable" on-infinite="loadMore('closed')" distance="1%">
-                    </ion-infinite-scroll>
-                </ion-content>
-            </ion-tab>
-
-            <ion-tab title="{{'archive_running' | translate}}">
-                <ion-content class="padding">
-                    <ion-list>
-                        <ion-item ng-repeat="signal in listprocessing.data | filter: { status: 'processing' }" href="#/app/archiviodetail/{{signal.id}}" type="item-link">
-                            <b>{{signal.attribute.title}}</b>
+                            <b>{{signal.attribute.title}} </b> <span class="alignright ">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
 
 
-                            <p><i class="icon ion-ios-location" style="font-size:25px;"></i> {{signal.location.address}}</p>
+                            <p><i class="icon ion-ios-location " style="font-size:25px; "></i> {{signal.location.address}}</p>
 
                         </ion-item>
                     </ion-list>
-                    <ion-infinite-scroll ng-if="!noMoreProcessingItemsAvailable" on-infinite="loadMore('processing')" distance="1%">
+                    <ion-infinite-scroll ng-if="!noMoreClosedItemsAvailable " on-infinite="loadMore( 'closed') " distance="1% ">
                     </ion-infinite-scroll>
                 </ion-content>
-            </ion-tab>
+            </div>
 
-            <ion-tab title="{{'archive_waiting' | translate}}">
-                <ion-content class="padding">
+        </ion-tab>
+
+        <ion-tab title="{{ 'archive_running' | translate}} ">
+            <div>
+                <ion-content>
                     <ion-list>
-                        <ion-item ng-repeat="signal in listopen.data | filter: { status: 'open' }" href="#/app/archiviodetail/{{signal.id}}" type="item-link">
-                            <b>{{signal.attribute.title}}</b>
+                        <ion-item ng-repeat="signal in listprocessing.data | filter: { status: 'processing' } " href="#/app/archiviodetail/{{signal.id}} " type="item-link ">
+                            <b>{{signal.attribute.title}}</b> <span class="alignright ">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
 
 
-                            <p><i class="icon ion-ios-location" style="font-size:25px;"></i> {{signal.location.address}}</p>
+                            <p><i class="icon ion-ios-location " style="font-size:25px; "></i> {{signal.location.address}}</p>
+
                         </ion-item>
                     </ion-list>
-                    <ion-infinite-scroll ng-if="!noMoreOpenItemsAvailable" on-infinite="loadMore('open')" distance="1%">
+                    <ion-infinite-scroll ng-if="!noMoreProcessingItemsAvailable " on-infinite="loadMore( 'processing') " distance="1% ">
                     </ion-infinite-scroll>
                 </ion-content>
-            </ion-tab>
+            </div>
+        </ion-tab>
 
-        </ion-tabs>
-    </ion-nav-view>
+        <ion-tab title="{{ 'archive_waiting' | translate}} ">
+            <div>
+                <ion-content>
+                    <ion-list>
+                        <ion-item ng-repeat="signal in listopen.data | filter: { status: 'open' } " href="#/app/archiviodetail/{{signal.id}}">
+                            <b>{{signal.attribute.title}}</b> <span class="alignright ">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
+
+
+                            <p><i class="icon ion-ios-location " style="font-size:25px; "></i> {{signal.location.address}}</p>
+                        </ion-item>
+                    </ion-list>
+                    <ion-infinite-scroll ng-if="!noMoreOpenItemsAvailable " on-infinite="loadMore( 'open') " distance="1% ">
+                    </ion-infinite-scroll>
+                </ion-content>
+            </div>
+        </ion-tab>
+
+    </ion-tabs>
 </ion-view>
