--- a/roveretosegnala/www/templates/menu.html
+++ b/roveretosegnala/www/templates/menu.html
@@ -32,7 +32,7 @@
                          </span>
                     </div>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/archivio">
+                <ion-item nav-clear menu-close href="#/app/tab">
                     <div class="menu-entry">
 
                         <img src="img/ic-archivio.png">
