--- a/roveretosegnala/platforms/android/assets/www/css/style.css
+++ b/roveretosegnala/platforms/android/assets/www/css/style.css
@@ -168,13 +168,20 @@ body {
     max-height: 100%;
     bottom: 0;
     left: 0;
-/*
+    /*
     margin: auto;
     overflow: auto;
     position: fixed;
 */
+    
     right: 0;
     top: 0;
+}
+
+.image.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .slider {
