--- a/roveretosegnala/platforms/android/res/xml/config.xml
+++ b/roveretosegnala/platforms/android/res/xml/config.xml
@@ -22,6 +22,9 @@
         <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="Globalization">
+        <param name="android-package" value="org.apache.cordova.globalization.Globalization" />
+    </feature>
     <splash src="www/img/splash.png" />
     <icon src="www/img/ic_logo.png" />
     <name>roveretosegnala-ionic</name>
