--- a/roveretosegnala/www/templates/credits.html
+++ b/roveretosegnala/www/templates/credits.html
@@ -6,6 +6,30 @@
         </div>
     </ion-header-bar>
     <ion-content>
+        <div>
+            <div style="text-align: center">{{'credits_app' | translate | nl2br}}</div>
+            <div style="text-align: center">{{'credits_project' | translate}}</div>
+            <div>
+                <a href="http://www.fbk.eu" target="_system"><img class="image center" src="img/credits/fbk.png" width="50%" />
+                </a>
+            </div>
+            <div>
+                <a href="http://www.smartcommunitylab.it/" target="_system"><img class="image center" src="img/credits/logo-SCO.png" width="60%" />
+                </a>
+            </div>
+            <div>
+                <a href="http://www.comune.rovereto.tn.it/" target="_system"><img class="image center" src="img/credits/logo_comune_rovereto.png" width="60%" />
+                </a>
+            </div>
+            <div>
+                <a href="http://iescities.eu/" target="_system"><img class="image center" src="img/credits/logo_ies_cities.png" />
+                </a>
+            </div>
+            <div style="text-align: center"><span>{{'credits_info' | translate}}</span>
+                <a class="h5" href="mailto:roveretoexplorer@smartcampuslab.it">roveretoexplorer@smartcampuslab.it</a>
+            </div>
+        </div>
+        <!--
         <div class="row">
             <div class="col-75 col-offset-25">
 
@@ -58,5 +82,6 @@
                 <br/><a class="h5" href="mailto:roveretoexplorer@smartcampuslab.it">roveretoexplorer@smartcampuslab.it</a>
             </div>
         </div>
+-->
     </ion-content>
 </ion-modal-view>
