--- a/roveretosegnala/www/templates/mysignals.html
+++ b/roveretosegnala/www/templates/mysignals.html
@@ -2,7 +2,7 @@
     <ion-content has-header="true" has-footer="true" padding="true">
         <ion-list>
             <ion-item ng-repeat="signal in mySignals.data" href="#/app/archiviodetail/{{signal.id}}" type="item-link">
-                <b> {{signal.attribute.title}}</b> <span class="alignright">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
+                <b> {{signal.attribute.title}}</b> <span class="alignright">{{signal.created | date:' dd-MM-yyyy'}}</span>
                 <p><i class="icon ion-ios-location" style="font-size:25px;"></i> {{signal.location.address}}</p>
 
             </ion-item>
