--- a/roveretosegnala/www/templates/tab-closed.html
+++ b/roveretosegnala/www/templates/tab-closed.html
@@ -3,7 +3,7 @@
         <ion-list padding="true">
             <ion-item ng-repeat=" signal in listclosed.data | filter: { status: 'closed' } " href="#/app/archiviodetail/{{signal.id}} " type="item-link ">
 
-                <b>{{signal.attribute.title}} </b> <span class="alignright ">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
+                <b>{{signal.attribute.title}} </b> <span class="alignright ">{{signal.created | date:' dd-MM-yyyy'}}</span>
 
 
                 <p><i class="icon ion-ios-location " style="font-size:25px; "></i> {{signal.location.address}}</p>
