--- a/roveretosegnala/www/templates/tab-processing.html
+++ b/roveretosegnala/www/templates/tab-processing.html
@@ -2,7 +2,7 @@
     <ion-content class="has-header padding">
         <ion-list>
             <ion-item ng-repeat="signal in listprocessing.data | filter: { status: 'processing' } " href="#/app/archiviodetail/{{signal.id}} " type="item-link ">
-                <b>{{signal.attribute.title}}</b> <span class="alignright ">{{signal.created | date:' HH:mm dd-MM-yyyy'}}</span>
+                <b>{{signal.attribute.title}}</b> <span class="alignright ">{{signal.created | date:' dd-MM-yyyy'}}</span>
 
 
                 <p><i class="icon ion-ios-location " style="font-size:25px; "></i> {{signal.location.address}}</p>
