added login function with disabled menu's entries new lightgrey icons for disabled menu's entries

--- a/roveretosegnala/www/templates/menu.html
+++ b/roveretosegnala/www/templates/menu.html
@@ -32,10 +32,10 @@
                          </span>
                     </div>
                 </ion-item>
-                <ion-item nav-clear menu-close ng-click="openLoginPopUp()" ng-hide="userIsLogged">
+                <ion-item nav-clear ng-click="openLoginPopUp()" ng-hide="userIsLogged">
                     <div class="menu-entry-disabled">
 
-                        <img src="img/ic-segnala.png">
+                        <img src="img/ic-segnala-disabled.png">
                         <span>{{'menu_segnala' | translate}}
                          </span>
                     </div>
@@ -53,9 +53,9 @@
                         <span>{{'menu_lemiesegnalazioni' | translate}}</span>
                     </div>
                 </ion-item>
-                <ion-item nav-clear menu-close ng-click="openLoginPopUp()" ng-hide="userIsLogged">
+                <ion-item nav-clear ng-click="openLoginPopUp()" ng-hide="userIsLogged">
                     <div class="menu-entry-disabled">
-                        <img src="img/ic-mysignals.png">
+                        <img src="img/ic-mysignals-disabled.png">
                         <span>{{'menu_lemiesegnalazioni' | translate}}</span>
                     </div>
                 </ion-item>
