--- a/roveretosegnala/www/templates/map4address.html
+++ b/roveretosegnala/www/templates/map4address.html
@@ -1,5 +1,5 @@
 <ion-view title="{{'map_title' | translate}}">
-    <ion-content class="padding">
+    <ion-content>
         <div data-tap-disabled="true">
             <leaflet event-broadcast="events" defaults="defaults" center="center" markers="markers" style="width: 100%; height: 640px;"></leaflet>
         </div>
