--- a/roveretosegnala/www/templates/tab-closed.html
+++ b/roveretosegnala/www/templates/tab-closed.html
@@ -1,11 +1,11 @@
 <ion-view title="{{'archive_title' | translate}}">
     <ion-content class="has-header padding">
-        <div class="card" ng-hide="{{!emptylist}}">
+        <div class="card" ng-hide="!emptylist">
             <div class="item item-text-wrap">
                 {{'archive_empty_list' | translate}}
             </div>
         </div>
-        <ion-list padding="true" ng-hide="{{emptylist}}">
+        <ion-list padding="true" ng-hide="emptylist">
             <ion-item ng-repeat=" signal in listclosed.data | filter: { status: 'closed' } " href="#/app/archiviodetail/{{signal.id}} " type="item-link ">
 
                 <b>{{signal.attribute.title}} </b> <span class="alignright ">{{signal.created | date:' dd-MM-yyyy'}}</span>
