--- a/roveretosegnala/www/templates/menu.html
+++ b/roveretosegnala/www/templates/menu.html
@@ -82,6 +82,12 @@
                         <span>{{'menu_login' | translate}}</span>
                     </div>
                 </ion-item>
+                <ion-item nav-clear menu-close ng-click="startRatingSurvey()">
+                    <div class="menu-entry">
+                        <img src="img/ic-questionario.png">
+                        <span>Questionario</span>
+                    </div>
+                </ion-item>
                 <ion-item nav-clear menu-close ng-click="openModal(2)">
                     <div class="menu-entry">
 
