fix result with geocoder, added button for show poi

--- a/roveretosegnala/www/templates/archiviodetail.html
+++ b/roveretosegnala/www/templates/archiviodetail.html
@@ -3,6 +3,18 @@
     <ion-nav-buttons>
         <button class="button button-icon icon  ion-chevron-left" ng-click="myGoBack()"></button>
     </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+<!--
+<button class="button button-icon icon" ng-click="goToMap()">
+    Visualizza su mappa
+</button>
+-->
+
+        <!--        <button class="button button-icon icon  ion-chevron-left" ng-click="myGoBack()"></button>-->
+        <a href="" class="button button-icon" ng-click="goToMap()">
+            <i class="icon ion-location"></i>
+        </a>
+    </ion-nav-buttons>
 
     <ion-content has-header="true" has-footer="true" padding="true">
 
