--- a/roveretosegnala/www/templates/menu.html
+++ b/roveretosegnala/www/templates/menu.html
@@ -18,7 +18,7 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item nav-clear menu-close href="#/app/map">
+                <ion-item nav-clear menu-close ng-click="openMap()">
                     <div class="menu-entry">
                         <img src="img/ic-mappa.png">
                         <span>{{'menu_map' | translate}}</span>
