--- a/roveretosegnala/www/templates/map.html
+++ b/roveretosegnala/www/templates/map.html
@@ -1,6 +1,6 @@
 <ion-view title="{{'map_title' | translate}}">
     <ion-content ng-hide="!showmap">
-        <div data-tap-disabled="true">
+        <div div id="map-container" data-tap-disabled="true">
             <leaflet event-broadcast="events" center="center" markers="myMarkers" style="width: 100%; height: 640px;"></leaflet>
         </div>
     </ion-content>
