--- a/roveretosegnala/www/templates/segnala.html
+++ b/roveretosegnala/www/templates/segnala.html
@@ -23,7 +23,7 @@
 
                 <div class="item item-input item-button-right">
                     <!--                    <label class="item-input-wrapper">-->
-                    <placeautocomplete ng-model="result" attr-placeholder="{{'segnala_input_place_suggestion' | translate}}" click-activation="true" data="places" on-type="doSomething" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString"></placeautocomplete>
+                    <placeautocomplete ng-model="result" attr-placeholder="{{'segnala_input_place_suggestion' | translate}}" click-activation="true" data="places" on-type="typePlace" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString"></placeautocomplete>
 
                     <!--</label>-->
                     <div class="buttons">
@@ -62,14 +62,10 @@
                         <i class=" icon ion-images"></i>
                     </button>
                 </div>
-
                 <div class="wrapper" ng-repeat="image in images">
                     <img data-ng-src="{{image}}" width="200px" />
                     <span class="close" ng-click="removeImage(image)"></span>
                 </div>
-                <!--                    <img ng-repeat="image in images" data-ng-src="{{image}}" ng-click="removeImage(image)" height="200px" />-->
-
-
             </div>
         </form>
     </ion-content>
