--- a/roveretosegnala/www/templates/segnala.html
+++ b/roveretosegnala/www/templates/segnala.html
@@ -23,7 +23,7 @@
 
                 <div class="item item-input item-button-right">
                     <!--                    <label class="item-input-wrapper">-->
-                    <placeautocomplete ng-model="result" attr-placeholder="{{'segnala_input_place_suggestion' | translate}}" click-activation="true" data="places" on-type="typePlace" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString"></placeautocomplete>
+                    <placeautocomplete ng-model="result" attr-placeholder="{{'segnala_input_place_suggestion' | translate}}" click-activation="true" data="places" on-type="typePlace" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString" ng-blur="setNameParam"></placeautocomplete>
 
                     <!--</label>-->
                     <div class="buttons">
