--- a/roveretosegnala/www/templates/credits.html
+++ b/roveretosegnala/www/templates/credits.html
@@ -1,85 +1,62 @@
 <ion-modal-view>
-    <ion-header-bar>
+    <ion-header-bar align-title="center">
         <h1 class="title">Credits</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeModal(2)">Close</button>
+            <i class="icon voice-menu ion-close-round close-credits" ng-click="closeModal(2)"></i>
         </div>
     </ion-header-bar>
     <ion-content>
-        <div>
-            <div style="text-align: center">{{'credits_app' | translate | nl2br}}</div>
-            <div style="text-align: center">{{'credits_project' | translate}}</div>
-            <div>
-                <a href="http://www.fbk.eu" target="_blank"><img class="image center" src="img/credits/fbk.png" width="50%" />
-                </a>
-            </div>
-            <div>
-                <a href="http://www.smartcommunitylab.it/" target="_blank"><img class="image center" src="img/credits/logo-SCO.png" width="60%" />
-                </a>
-            </div>
-            <div>
-                <a href="http://www.comune.rovereto.tn.it/" target="_blank"><img class="image center" src="img/credits/logo_comune_rovereto.png" width="60%" />
-                </a>
-            </div>
-            <div>
-                <a href="http://iescities.eu/" target="_blank"><img class="image center" src="img/credits/logo_ies_cities.png" />
-                </a>
-            </div>
-
-        </div>
-        <!--
-        <div class="row">
-            <div class="col-75 col-offset-25">
-
-                <span class="h2 h2-credits">{{'credits_app' | translate | nl2br}}</span>
-                <br/>
-            </div>
-        </div>
-
-        <div class="row version">
-            <div class="col" ng-bind-html="version"></div>
-        </div>
-
-        <div class="row title">
-            <div class="col-75 col-offset-25"><span class="h4 credits-title">{{'credits_project' | translate}}</span>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-75 col-offset-25">
-                <a href="http://www.fbk.eu" target="_system"><img src="img/credits/fbk.png" width="60%" align="center" />
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-75 col-offset-25">
-                <a href="http://www.smartcommunitylab.it/" target="_system"><img src="img/credits/logo-SCO.png" width="60%" />
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-75 col-offset-25">
-                <a href="http://www.comune.rovereto.tn.it/" target="_system"><img src="img/credits/logo_comune_rovereto.png" width="60%" />
-                </a>
-            </div>
-        </div>
-
-        <div class="row title">
-            <div class="col-75 col-offset-25"><span class="h4 credits-title">{{'credits_sponsored' | translate}}</span>
-            </div>
-        </div>
         <div class="row">
             <div class="col">
-                <a href="http://iescities.eu/" target="_system"><img src="img/credits/logo_ies_cities.png" />
+                <div class="credits_title">{{'appName' | translate}}</div>
+            </div>
+        </div>
+        <div class="row credits_row version">
+            <div class="col credits_version" ng-bind-html="version"></div>
+        </div>
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span>{{'credits_project' | translate}}</span>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-50">
+                <a href="#" onclick="window.open('http://www.fbk.eu', '_system', 'location=yes'); return false;"><img class="image center" src="img/credits/fbk.png" width="50%" />
+                </a>
+            </div>
+            <div class="col col-50">
+                <a href="#" onclick="window.open('http://iescities.eu/', '_system', 'location=yes'); return false;"><img class="image center" src="img/credits/logo_ies_cities.png" width="70%" />
+                </a>
+            </div>
+        </div>
+        <div class="row credits_row ">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.smartcommunitylab.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/credits/logo-SCO.png" width="50%" />
+                </a>
+            </div>
+        </div>
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span>{{'credits_sponsored' | translate}}</span>
+            </div>
+        </div>
+        <div class="row credits_row">
+            <div class="col col-center">
+                <a href="#" onclick="window.open('http://www.comune.rovereto.tn.it/', '_system', 'location=yes'); return false;"><img class="image center" src="img/credits/logo_comune_rovereto.png" width="60%" />
                 </a>
             </div>
         </div>
 
-        <div class="row title last">
-            <div class="col-75 col-offset-25"><span class="h4 credits-title">{{'credits_info' | translate}}</span>
-                <br/><a class="h5" href="mailto:roveretoexplorer@smartcampuslab.it">roveretoexplorer@smartcampuslab.it</a>
+        <div class="row credits_row credits_subtitle">
+            <div class="col"><span class="credits-title">{{'credits_info' | translate}}</span>
+                <br/><a class="credits_mail" href="mailto:info@smartcommunitylab.it">info@smartcommunitylab.it</a>
             </div>
         </div>
--->
+        <div class="row credits_row">
+            <div class="col">
+                <button class="button button-percorsi button-custom button-block" onclick="window.open('http://www.smartcommunitylab.it/licenze/', '_system', 'location=yes'); return false;">
+                    {{'credits_licenses_button' | translate}}
+                </button>
+            </div>
+        </div>
+
     </ion-content>
 </ion-modal-view>
